@@ -1,10 +1,11 @@
 3.1.0 (Unreleased)
 ------------------
 
-- fix issue208: Mirrored files (PyPI) are streamed to the client while
+- fix issue208: Uncached mirrored files (PyPI) are streamed to the client while
   downloading. This prevents timeouts in pip etc. The files are only cached if
   there were no errors and in case there is a checksum, the content matches.
-  Replicas can't stream yet.
+  Downloads on replicas won't wait until they are in sync, but pass on what
+  they get from the master.
 
 - fix issue229: A replica talking to a master behind nginx decoded gzipped
   data, but left the Content-Encoding header unchanged. Now data is passed on
